feat: testing and configuring testing dependencies to be compatible one with another